Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-23416

Crash while executing DB compaction

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 5.0.0
    • 4.6.1
    • forestdb
    • None
    • Untriaged
    • Unknown

    Description

      Originally filed in couchbase-lite-ios repo.
       
      msanilkumar2020 opened this issue a month ago
      Hi,

      We are getting this crash while we are executing DB compaction, please find the below symbolicated crash stack.

      Exception Type: EXC_BAD_ACCESS (SIGSEGV)
      Exception Subtype: KERN_INVALID_ADDRESS at 0x0000000000000000
      Termination Signal: Segmentation fault: 11
      Termination Reason: Namespace SIGNAL, Code 0xb
      Terminating Process: exc handler [0]
      Triggered by Thread: 13

      Thread 13 name: CouchbaseLite
      Thread 13 Crashed:
      0 MYAPPP 0x000000010055b970 _fdb_compact_move_docs(_fdb_kvs_handle*, filemgr*, hbtrie*, btree*, btree*, btree*, docio_handle*, btreeblk_handle*, unsigned long*, bool) (forestdb.cc:5438)
      1 MYAPPP 0x000000010055a4ec _fdb_compact_file(_fdb_kvs_handle*, filemgr*, btreeblk_handle*, docio_handle*, hbtrie*, hbtrie*, btree*, btree*, unsigned long long, bool) (forestdb.cc:7136)
      2 MYAPPP 0x0000000100559ff8 fdb_compact_file (forestdb.cc:7000)
      3 MYAPPP 0x000000010055dafc _fdb_compact(_fdb_file_handle*, char const*, unsigned long long, bool, fdb_encryption_key const*) (forestdb.cc:7385)
      4 MYAPPP 0x000000010055d978 fdb_compact (forestdb.cc:7399)
      5 MYAPPP 0x00000001004b7a4c cbforest::Database::compact() (Database.cc:366)
      6 MYAPPP 0x00000001004be080 c4db_compact (c4Database.cc:338)
      7 MYAPPP 0x0000000100497fa8 -[CBL_ForestDBStorage compact:] (CBL_ForestDBStorage.mm:247)
      8 MYAPPP 0x000000010071c0a4 -[CBLDatabase compact:] (CBLDatabase.m:233)
      9 MYAPPP 0x00000001007b3004 -[CBL_Router(Handlers) do_POST_compact:] (CBL_Router+Handlers.m:394)
      10 MYAPPP 0x00000001007ad978 -[CBL_Router route] (CBL_Router.m:491)
      11 MYAPPP 0x00000001007adedc -[CBL_Router run] (CBL_Router.m:520)
      12 MYAPPP 0x00000001007af2f4 __19-[CBL_Router start]_block_invoke (CBL_Router.m:745)
      13 Foundation 0x000000018a4e5048 __NSThreadPerformPerform + 340
      14 CoreFoundation 0x000000018997eb5c CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION + 24
      15 CoreFoundation 0x000000018997e4a4 __CFRunLoopDoSources0 + 524
      16 CoreFoundation 0x000000018997c0a4 __CFRunLoopRun + 804
      17 CoreFoundation 0x00000001898aa2b8 CFRunLoopRunSpecific + 444
      18 Foundation 0x000000018a3e726c -[NSRunLoop(NSRunLoop) runMode:beforeDate:] + 304
      19 MYAPPP 0x00000001006da6b4 -[CBL_RunLoopServer runServerThread] (CBL_Server.m:193)
      20 Foundation 0x000000018a4e4e68 NSThread__start + 1024
      21 libsystem_pthread.dylib 0x0000000188a65850 _pthread_body + 240
      22 libsystem_pthread.dylib 0x0000000188a65760 _pthread_body + 0
      23 libsystem_pthread.dylib 0x0000000188a62d94 thread_start + 4

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sundar Sundar Sridharan (Inactive)
            daniel.petersen Daniel Petersen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty