MB-23416: Handle memory allocation failure during compaction

* The sorting window or document write batch in compaction logic are
big memory segments, thus allocating them may fail in the environment
with small RAM, such as mobile devices.

* We retry allocation with reduced size, and then return failure after
a few more attempts.

Change-Id: I16d04c8ff6314a47dfbf8f71b27e2729c1d3d6b4
Reviewed-on: http://review.couchbase.org/75630
Reviewed-by: Sundararaman Sridharan <sundar@couchbase.com>
Tested-by: Jung-Sang Ahn <jungsang.ahn@gmail.com>